--- a/styles/style.css
+++ b/styles/style.css
@@ -25,13 +25,12 @@ html {
 }
 
 .home {
-  background:
-    linear-gradient(
-      180deg,
-      rgba(226, 153, 1, 1),
-      rgba(255, 254, 251, 1),
-      rgba(118, 80, 0, 1)
-    );
+  background: linear-gradient(
+    180deg,
+    rgba(226, 153, 1, 1),
+    rgba(255, 254, 251, 1),
+    rgba(118, 80, 0, 1)
+  );
 
   /* setup background gradient */
 }
@@ -106,15 +105,14 @@ html {
     rgba(255, 254, 251, 0) 64%
   ); */
   z-index: 2;
-  background:
-    linear-gradient(
-      rgba(255, 254, 251, 0),
-      rgba(255, 254, 251, 0.8),
-      30%,
-      rgba(255, 254, 251, 1),
-      rgba(255, 254, 251, 0.8) 80%,
-      rgba(255, 254, 251, 0)
-    );
+  background: linear-gradient(
+    rgba(255, 254, 251, 0),
+    rgba(255, 254, 251, 0.8),
+    30%,
+    rgba(255, 254, 251, 1),
+    rgba(255, 254, 251, 0.8) 80%,
+    rgba(255, 254, 251, 0)
+  );
   display: flex;
   padding: 4rem;
   justify-content: center;
@@ -290,26 +288,15 @@ html {
 }
 
 .isec__10 {
-
-}
-
-/* .isec__10 {
-  font-size: 180%;
   margin-left: 68%;
-  padding-top: 1.2rem;
-  padding-bottom: 1.2rem;
-  padding-left: 0.4rem;
-  padding-right: 0.4rem;
-  border-radius: 50%;
-  border: var(--coffee-black) 0.1rem solid;
-  stroke-dasharray: 0.4rem; */
-
-/* specific settings for line 10 */
-
+}
+.isec__11__a {
+  margin-top: 4%;
+  margin-left: 6%;
+  transform: rotate(-6deg);
+}
 .isec__11 {
   margin-right: 68%;
-  margin-top: 16%;
-
   /* specific settings for line 11 */
 }
 
@@ -340,87 +327,38 @@ html {
 }
 
 .isec__15 {
-  transform: scale(0.6);
   margin-top: 2%;
   margin-left: 4%;
 
   /* ^ specific settings for line 15 */
-  stroke-dasharray: 20rem;
-  stroke-dashoffset: 20rem;
-  animation: second-amp-line 2000ms ease-in-out forwards 400ms;
-
-  /* ^ animation settings for line 15 */
-}
-
-@keyframes second-amp-line {
-  from {
-    fill: transparent;
-  }
-
-  to {
-    stroke-dashoffset: 0;
-    fill: var(--coffee-black);
-  }
-
-  /* keyframe settings for line 15 */
 }
 
 .isec__16 {
-  font-size: 140%;
+  position: relative;
+  font-size: 180%;
   margin-top: 8%;
-  margin-bottom: 40%;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
 
   /* specific settings for line 16 */
 }
-
-.navbar__sec__2 {
-  color: var(--coffee-black);
-  font-size: 1.8rem;
-  text-decoration: none;
-  padding-top: 3.4rem;
-  padding-bottom: 3.4rem;
-  padding-left: 0.3rem;
-  padding-right: 0.3rem;
-  border: var(--coffee-black) solid;
-  border-radius: 50%;
-
-  /* ^ 2nd nav bar secondary button settings */
-  animation: sec-nav-bar-load 2000ms ease-out 2000ms;
-  opacity: 0%;
-  scale: 0;
-  animation-fill-mode: forwards;
-
-  /* ^ 2nd nav bar secondary button animation settings */
+.isec__16__a {
+  color: transparent;
+  position: absolute;
+  content: "";
+  background-color: var(--coffee-black);
+  height: 0.2rem;
+  bottom: -0.8rem;
+  /* specific settings for line 16 */
 }
-
-.navbar__sec__2:hover {
-  background-color: var(--coffee-bright);
-
-  /* 2nd nav bar secondary button hover settings */
+.isec__16__b {
+  font-size: 200%;
+  position: absolute;
+  color: transparent;
+  margin-left: 40%;
+  margin-top: 20%;
+  border-left: dashed var(--coffee-black) 0.6rem;
 }
-
-.navbar__sec__2:active {
-  color: var(--coffee-white);
-  background-color: var(--coffee-dark);
-  border: var(--coffee-bright) solid;
-
-  /* 2nd nav bar secondary button active settings */
-}
-
-@keyframes sec-nav-bar-load {
-  0% {
-    opacity: 0;
-    transform: scale(0);
-  }
-
-  100% {
-    opacity: 100;
-    transform: scale(1);
-  }
-
-  /* ^ 2nd nav bar buttons animation keyframes */
-}
-
 .isec__17 {
   margin-top: 40%;
   font-size: 160%;
@@ -428,7 +366,6 @@ html {
 
   /* specific settings for line 17 */
 }
-
 .isec__18 {
   margin-left: 26%;
   margin-top: -2%;
@@ -573,5 +510,58 @@ html {
   stroke-dashoffset: 0;
 }
 
-/* intro section */
+.circ {
+  transform: translateY(1rem);
+  opacity: 0;
+  transition: all 4000ms ease-in-out;
 }
+.circle {
+  opacity: 1;
+  transform: translateY(0);
+}
+.circ circle {
+  stroke-dasharray: 20rem;
+  stroke-dashoffset: 20rem;
+  transition: all 2000ms 2000ms;
+}
+.circle circle {
+  stroke-dasharray: 0rem;
+}
+.line {
+  opacity: 0;
+  transition: all 4000ms ease-in-out;
+}
+.inline {
+  opacity: 1;
+}
+
+.line path {
+  stroke-dasharray: 20rem;
+  stroke-dashoffset: 20rem;
+  transition: linear 2000ms 1000ms;
+}
+.inline path {
+  stroke-dasharray: 0rem;
+}
+.isec__15 {
+  transform: scale(0.6);
+}
+.under {
+  width: 0;
+  opacity: 0;
+  transition: linear 2000ms 1000ms;
+}
+.underscore {
+  opacity: 1;
+  width: 100%;
+}
+.dot {
+  padding-top: 0.1rem;
+  opacity: 0;
+  transition: all 2000ms ease-in-out 1000ms;
+}
+.dotted {
+  opacity: 1;
+  padding-top: 12rem;
+}
+/* intro section */
