--- a/styles/style.css
+++ b/styles/style.css
@@ -25,13 +25,12 @@ html {
 }
 
 .home {
-  background:
-    linear-gradient(
-      180deg,
-      rgba(226, 153, 1, 1),
-      rgba(255, 254, 251, 1),
-      rgba(118, 80, 0, 1)
-    );
+  background: linear-gradient(
+    180deg,
+    rgba(226, 153, 1, 1),
+    rgba(255, 254, 251, 1),
+    rgba(118, 80, 0, 1)
+  );
 
   /* setup background gradient */
 }
@@ -106,15 +105,14 @@ html {
     rgba(255, 254, 251, 0) 64%
   ); */
   z-index: 2;
-  background:
-    linear-gradient(
-      rgba(255, 254, 251, 0),
-      rgba(255, 254, 251, 0.8),
-      30%,
-      rgba(255, 254, 251, 1),
-      rgba(255, 254, 251, 0.8) 80%,
-      rgba(255, 254, 251, 0)
-    );
+  background: linear-gradient(
+    rgba(255, 254, 251, 0),
+    rgba(255, 254, 251, 0.8),
+    30%,
+    rgba(255, 254, 251, 1),
+    rgba(255, 254, 251, 0.8) 80%,
+    rgba(255, 254, 251, 0)
+  );
   display: flex;
   padding: 4rem;
   justify-content: center;
@@ -147,7 +145,7 @@ html {
 }
 
 .navbar__pri:hover {
-  background-color: var(--coffee-brown);
+  background-color: var(--coffee-dark);
 
   /* nav bar primary button hover settings */
 }
@@ -292,7 +290,8 @@ html {
 .isec__10 {
   margin-left: 68%;
 }
-
+/* intro section */
+/* about me section */
 .isec__11__a {
   margin-top: 4%;
   margin-left: 6%;
@@ -362,7 +361,7 @@ html {
 }
 
 .isec__17 {
-  margin-top: 40%;
+  margin-top: 30rem;
   font-size: 160%;
   font-style: italic;
 
@@ -388,7 +387,79 @@ html {
 
   /* specific settings for line 20 */
 }
+/* about me section */
+/* footer */
+.form {
+  display: flex;
+  padding-bottom: 10%;
+  justify-content: center;
+}
+.form__detail {
+  position: relative;
+  width: 40%;
+}
 
+.form__detail ::placeholder {
+  color: var(--coffee-dark);
+}
+
+.form input {
+  background-color: var(--coffee-white);
+  margin: 2%;
+  appearance: none;
+  font-style: italic;
+  outline: none;
+  border: none;
+  padding: 1rem;
+  font-family: var(--paragraph-font);
+  border-radius: 2rem;
+  cursor: pointer;
+}
+.form input:hover {
+  border: var(--coffee-bright) 0.4rem solid;
+  padding: 0.6rem;
+}
+.form__detail__name {
+  width: 48%;
+}
+.form__detail__email {
+  width: 60%;
+}
+.form__detail__mes {
+  width: 100%;
+  height: 60%;
+}
+.form__detail__but {
+  color: var(--coffee-white);
+  text-decoration: none;
+  font-family: var(--paragraph-font);
+  background-color: var(--coffee-black);
+  font-size: 2rem;
+  padding-top: 3.2rem;
+  padding-bottom: 3.2rem;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
+  border-radius: 50%;
+  border: var(--coffee-black) solid;
+  margin-left: 44%;
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+.form__detail__but:hover {
+  background-color: var(--coffee-dark);
+
+  /* footer primary button hover settings */
+}
+
+.form__detail__but:active {
+  color: var(--coffee-black);
+  background-color: var(--coffee-bright);
+  border: var(--coffee-bright) solid;
+
+  /* footer primary button active settings */
+}
+/* footer */
+/* animation */
 .hide {
   opacity: 0;
   transform: translateY(1rem);
@@ -578,7 +649,6 @@ html {
 
 .dotted {
   opacity: 1;
-  padding-top: 12rem;
+  padding-top: 16rem;
 }
-
-/* intro section */
+/* animation */
