--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 :root {
   --poem-font: "Estonia", cursive;
   --paragraph-font: "Libre Baskerville", serif;
-  --coffee-black: rgba(34, 23, 0, 1);
+  --coffee-black: #221700;
   --coffee-dark: rgba(118, 80, 0, 1);
   --coffee-bright: rgba(226, 153, 1, 1);
   --coffee-white: rgba(255, 254, 251, 1);
@@ -25,14 +25,13 @@ html {
 }
 
 .home {
-  background:
-    linear-gradient(
-      180deg,
-      rgba(226, 153, 1, 1),
-      rgba(255, 254, 251, 1),
-      rgba(118, 80, 0, 1)
-    );
-
+  background: linear-gradient(
+    180deg,
+    rgba(226, 153, 1, 1),
+    rgba(255, 254, 251, 1) 22%,
+    rgba(255, 254, 251, 1) 68%,
+    rgba(118, 80, 0, 1)
+  );
   /* setup background gradient */
 }
 
@@ -106,15 +105,14 @@ html {
     rgba(255, 254, 251, 0) 64%
   ); */
   z-index: 2;
-  background:
-    linear-gradient(
-      rgba(255, 254, 251, 0),
-      rgba(255, 254, 251, 0.8),
-      30%,
-      rgba(255, 254, 251, 1),
-      rgba(255, 254, 251, 0.8) 80%,
-      rgba(255, 254, 251, 0)
-    );
+  background: linear-gradient(
+    rgba(255, 254, 251, 0),
+    rgba(255, 254, 251, 0.8),
+    30%,
+    rgba(255, 254, 251, 1),
+    rgba(255, 254, 251, 0.8) 80%,
+    rgba(255, 254, 251, 0)
+  );
   display: flex;
   padding: 4rem;
   justify-content: center;
@@ -129,10 +127,10 @@ html {
   text-decoration: none;
   background-color: var(--coffee-black);
   font-size: 2rem;
-  padding-top: 3.2rem;
-  padding-bottom: 3.2rem;
-  padding-left: 0.2rem;
-  padding-right: 0.2rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
   border-radius: 50%;
   border: var(--coffee-black) solid;
   margin-right: 4%;
@@ -164,10 +162,10 @@ html {
   color: var(--coffee-black);
   font-size: 1.8rem;
   text-decoration: none;
-  padding-top: 3.4rem;
-  padding-bottom: 3.4rem;
-  padding-left: 0.3rem;
-  padding-right: 0.3rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   border: var(--coffee-black) solid;
   border-radius: 50%;
 
@@ -395,7 +393,7 @@ html {
 /* about me section */
 
 /* footer */
-.form {
+.footer {
   display: flex;
   padding-bottom: 10%;
   justify-content: center;
@@ -403,14 +401,15 @@ html {
 
 .form__detail {
   position: relative;
-  width: 40%;
+  width: 48%;
 }
 
 .form__detail ::placeholder {
   color: var(--coffee-dark);
+  text-align: center;
 }
 
-.form input {
+.form__detail input {
   background-color: var(--coffee-white);
   margin: 2%;
   appearance: none;
@@ -421,11 +420,6 @@ html {
   font-family: var(--paragraph-font);
   border-radius: 2rem;
   cursor: pointer;
-}
-
-.form input:hover {
-  border: var(--coffee-bright) 0.4rem solid;
-  padding: 0.6rem;
 }
 
 .form__detail__name {
@@ -440,38 +434,52 @@ html {
   width: 100%;
   height: 60%;
 }
-
 .form__detail__but {
   color: var(--coffee-white);
   text-decoration: none;
   font-family: var(--paragraph-font);
   background-color: var(--coffee-black);
   font-size: 2rem;
-  padding-top: 3.2rem;
-  padding-bottom: 3.2rem;
-  padding-left: 1.3rem;
-  padding-right: 1.3rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   border-radius: 50%;
   border: var(--coffee-black) solid;
-  margin-left: 44%;
-  margin-top: 4%;
-  margin-bottom: 4%;
+  margin-left: 38%;
+  margin-top: 4rem;
 }
 
 .form__detail__but:hover {
+  transition: none;
   background-color: var(--coffee-dark);
 
   /* footer primary button hover settings */
 }
 
 .form__detail__but:active {
+  transition:none
   color: var(--coffee-black);
   background-color: var(--coffee-bright);
   border: var(--coffee-bright) solid;
 
   /* footer primary button active settings */
 }
+.form__icon {
+  transform: scale(1.2);
+  display: flex;
+  justify-content: space-around;
+  margin-top: 4rem;
+  margin-bottom: 12rem;
+  fill: var(--coffee-black);
+}
 
+.form__icon a:hover {
+  fill: var(--coffee-bright);
+}
+.form__icon a:active {
+  fill: var(--coffee-white);
+}
 /* footer */
 
 /* animation */
@@ -666,5 +674,48 @@ html {
   opacity: 1;
   padding-top: 16rem;
 }
+.boxo {
+  opacity: 0;
+  width: 0%;
+  transition: all 2000ms ease-in-out 1000ms;
+}
+.boxero {
+  opacity: 1;
+  width: 48%;
+}
+.boxi {
+  opacity: 0;
+  width: 0%;
+  transition: all 2000ms ease-in-out 2000ms;
+}
+.boxeri {
+  opacity: 1;
+  width: 62%;
+}
+.boxs {
+  opacity: 0;
+  width: 0%;
+  height: 0%;
+  transition: all 2000ms ease-in-out 3000ms;
+}
+.boxers {
+  opacity: 1;
+  width: 100%;
+  height: 28%;
+}
 
+.footer input:hover {
+  transition: none;
+  border: var(--coffee-bright) solid 0.4rem;
+}
+.but {
+  opacity: 0;
+  transform: scale(0);
+  transition: all 2000ms ease-in-out;
+}
+.button {
+  opacity: 1;
+  transform: scale(1);
+  border-radius: 50%;
+}
 /* animation */
