add social media links

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,13 +25,15 @@ html {
 }
 
 .home {
-  background: linear-gradient(
-    180deg,
-    rgba(226, 153, 1, 1),
-    rgba(255, 254, 251, 1) 22%,
-    rgba(255, 254, 251, 1) 68%,
-    rgba(118, 80, 0, 1)
-  );
+  background:
+    linear-gradient(
+      180deg,
+      rgba(226, 153, 1, 1),
+      rgba(255, 254, 251, 1) 22%,
+      rgba(255, 254, 251, 1) 68%,
+      rgba(118, 80, 0, 1)
+    );
+
   /* setup background gradient */
 }
 
@@ -105,14 +107,15 @@ html {
     rgba(255, 254, 251, 0) 64%
   ); */
   z-index: 2;
-  background: linear-gradient(
-    rgba(255, 254, 251, 0),
-    rgba(255, 254, 251, 0.8),
-    30%,
-    rgba(255, 254, 251, 1),
-    rgba(255, 254, 251, 0.8) 80%,
-    rgba(255, 254, 251, 0)
-  );
+  background:
+    linear-gradient(
+      rgba(255, 254, 251, 0),
+      rgba(255, 254, 251, 0.8),
+      30%,
+      rgba(255, 254, 251, 1),
+      rgba(255, 254, 251, 0.8) 80%,
+      rgba(255, 254, 251, 0)
+    );
   display: flex;
   padding: 4rem;
   justify-content: center;
@@ -127,10 +130,10 @@ html {
   text-decoration: none;
   background-color: var(--coffee-black);
   font-size: 2rem;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  padding-left: 0.8rem;
-  padding-right: 0.8rem;
+  padding-top: 3.4rem;
+  padding-bottom: 3.4rem;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
   border-radius: 50%;
   border: var(--coffee-black) solid;
   margin-right: 4%;
@@ -162,10 +165,10 @@ html {
   color: var(--coffee-black);
   font-size: 1.8rem;
   text-decoration: none;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-top: 3.4rem;
+  padding-bottom: 3.4rem;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
   border: var(--coffee-black) solid;
   border-radius: 50%;
 
@@ -434,16 +437,17 @@ html {
   width: 100%;
   height: 60%;
 }
+
 .form__detail__but {
   color: var(--coffee-white);
   text-decoration: none;
   font-family: var(--paragraph-font);
   background-color: var(--coffee-black);
   font-size: 2rem;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-top: 3.4rem;
+  padding-bottom: 3.4rem;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
   border-radius: 50%;
   border: var(--coffee-black) solid;
   margin-left: 38%;
@@ -458,15 +462,15 @@ html {
 }
 
 .form__detail__but:active {
-  transition:none
+  transition: none;
   color: var(--coffee-black);
   background-color: var(--coffee-bright);
   border: var(--coffee-bright) solid;
 
   /* footer primary button active settings */
 }
+
 .form__icon {
-  transform: scale(1.2);
   display: flex;
   justify-content: space-around;
   margin-top: 4rem;
@@ -477,9 +481,11 @@ html {
 .form__icon a:hover {
   fill: var(--coffee-bright);
 }
+
 .form__icon a:active {
   fill: var(--coffee-white);
 }
+
 /* footer */
 
 /* animation */
@@ -674,30 +680,36 @@ html {
   opacity: 1;
   padding-top: 16rem;
 }
+
 .boxo {
   opacity: 0;
   width: 0%;
   transition: all 2000ms ease-in-out 1000ms;
 }
+
 .boxero {
   opacity: 1;
   width: 48%;
 }
+
 .boxi {
   opacity: 0;
   width: 0%;
   transition: all 2000ms ease-in-out 2000ms;
 }
+
 .boxeri {
   opacity: 1;
   width: 62%;
 }
+
 .boxs {
   opacity: 0;
   width: 0%;
   height: 0%;
-  transition: all 2000ms ease-in-out 3000ms;
+  transition: all 2000ms ease-in-out 2000ms;
 }
+
 .boxers {
   opacity: 1;
   width: 100%;
@@ -708,14 +720,27 @@ html {
   transition: none;
   border: var(--coffee-bright) solid 0.4rem;
 }
+
 .but {
   opacity: 0;
   transform: scale(0);
   transition: all 2000ms ease-in-out;
 }
+
 .button {
   opacity: 1;
   transform: scale(1);
-  border-radius: 50%;
 }
+
+.buts {
+  opacity: 0;
+  transform: scale(0);
+  transition: all 2000ms ease-in-out;
+}
+
+.buttons {
+  opacity: 1;
+  transform: scale(1.2);
+}
+
 /* animation */
