--- a/styles/style.css
+++ b/styles/style.css
@@ -25,13 +25,14 @@ html {
 }
 
 .home {
-  background: linear-gradient(
-    180deg,
-    rgba(226, 153, 1, 1),
-    rgba(255, 254, 251, 1) 22%,
-    rgba(255, 254, 251, 1) 68%,
-    rgba(118, 80, 0, 1)
-  );
+  background:
+    linear-gradient(
+      180deg,
+      rgba(226, 153, 1, 1),
+      rgba(255, 254, 251, 1) 22%,
+      rgba(255, 254, 251, 1) 68%,
+      rgba(118, 80, 0, 1)
+    );
 
   /* setup background gradient for home and portfolio */
 }
@@ -106,14 +107,15 @@ html {
     rgba(255, 254, 251, 0) 64%
   ); */
   z-index: 2;
-  background: linear-gradient(
-    rgba(255, 254, 251, 0),
-    rgba(255, 254, 251, 0.8),
-    30%,
-    rgba(255, 254, 251, 1),
-    rgba(255, 254, 251, 0.8) 80%,
-    rgba(255, 254, 251, 0)
-  );
+  background:
+    linear-gradient(
+      rgba(255, 254, 251, 0),
+      rgba(255, 254, 251, 0.8),
+      30%,
+      rgba(255, 254, 251, 1),
+      rgba(255, 254, 251, 0.8) 80%,
+      rgba(255, 254, 251, 0)
+    );
   display: flex;
   padding: 4rem;
   justify-content: center;
@@ -957,9 +959,11 @@ html {
 .ssec__orb2 {
   transform: translateY(2.4rem) translateX(4rem);
 }
+
 .ssec__orb3 {
   transform: translateY(8.6rem) translateX(-8.4rem);
 }
+
 .skill__circ {
   transform: translateX(0.2rem) translateY(0.4rem) scale(1.2);
 }
@@ -1138,4 +1142,5 @@ html {
   opacity: 1;
   stroke-dashoffset: 0;
 }
+
 /* portfolio animation */
